// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> Snapshots should match snapshot 1`] = `
.c8 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 6px 22px 6px;
  min-width: 70px;
  font-size: 12px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #fefefe , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #dfdfdf;
}

.c8:disabled {
  color: #848584;
  text-shadow: 1px 1px white;
}

.c8:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c8:not(:disabled):active {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #dfdfdf , inset 1px 1px 0 0  #848584 , inset -2px -2px 0 0  #fefefe , inset 2px 2px 0 0  #0a0a0a;
}

.c8:not(:last-child) {
  margin-right: 6px;
}

.c1 {
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #dfdfdf , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 16px;
  height: 16px;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2;
}

.c6:first-child {
  margin-right: 0;
}

.c9 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-weight: 600;
}

.c2 {
  height: 20px;
  padding: 1px 2px;
  margin: 0 0 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c12 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c13 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c13 .c7 {
  margin-left: 6px;
  min-width: 70px;
}

.c13 .c7:first-child {
  margin-left: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  list-style: none;
  margin: 0;
  padding-left: 0;
  padding-bottom: 3px;
  padding-top: 5px;
}

.c11 {
  position: relative;
  padding-left: 6px;
  padding-right: 6px;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c11 ul {
  position: absolute;
  left: 0;
  color: #0a0a0a;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="16"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="16"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <ul
        class="c10"
      >
        <li
          class="c11"
        >
          File
        </li>
        <li
          class="c11"
        >
          Edit
        </li>
      </ul>
      <div
        class="c12"
      >
        Hello
      </div>
      <div
        class="c13"
      >
        <button
          class="c7 c8"
          font-size="12px"
          value="Ok"
        >
          Ok
        </button>
        <button
          class="c7 c8"
          font-size="12px"
          value="Cancel"
        >
          Cancel
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with buttonsAligment prop equals center 1`] = `
.c8 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 6px 22px 6px;
  min-width: 70px;
  font-size: 12px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #fefefe , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #dfdfdf;
}

.c8:disabled {
  color: #848584;
  text-shadow: 1px 1px white;
}

.c8:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c8:not(:disabled):active {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #dfdfdf , inset 1px 1px 0 0  #848584 , inset -2px -2px 0 0  #fefefe , inset 2px 2px 0 0  #0a0a0a;
}

.c8:not(:last-child) {
  margin-right: 6px;
}

.c1 {
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #dfdfdf , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 16px;
  height: 16px;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2;
}

.c6:first-child {
  margin-right: 0;
}

.c9 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-weight: 600;
}

.c2 {
  height: 20px;
  padding: 1px 2px;
  margin: 0 0 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c11 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 .c7 {
  margin-left: 6px;
  min-width: 70px;
}

.c11 .c7:first-child {
  margin-left: 0;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="16"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="16"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c10"
      >
        Hello
      </div>
      <div
        class="c11"
      >
        <button
          class="c7 c8"
          font-size="12px"
          value="Ok"
        >
          Ok
        </button>
        <button
          class="c7 c8"
          font-size="12px"
          value="Cancel"
        >
          Cancel
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with buttonsAligment prop equals flex-start 1`] = `
.c8 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 6px 22px 6px;
  min-width: 70px;
  font-size: 12px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #fefefe , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #dfdfdf;
}

.c8:disabled {
  color: #848584;
  text-shadow: 1px 1px white;
}

.c8:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c8:not(:disabled):active {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #dfdfdf , inset 1px 1px 0 0  #848584 , inset -2px -2px 0 0  #fefefe , inset 2px 2px 0 0  #0a0a0a;
}

.c8:not(:last-child) {
  margin-right: 6px;
}

.c1 {
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #dfdfdf , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 16px;
  height: 16px;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2;
}

.c6:first-child {
  margin-right: 0;
}

.c9 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-weight: 600;
}

.c2 {
  height: 20px;
  padding: 1px 2px;
  margin: 0 0 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c11 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c11 .c7 {
  margin-left: 6px;
  min-width: 70px;
}

.c11 .c7:first-child {
  margin-left: 0;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="16"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="16"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c10"
      >
        Hello
      </div>
      <div
        class="c11"
      >
        <button
          class="c7 c8"
          font-size="12px"
          value="Ok"
        >
          Ok
        </button>
        <button
          class="c7 c8"
          font-size="12px"
          value="Cancel"
        >
          Cancel
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with different activeWindow 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 6px 22px 6px;
  min-width: 70px;
  font-size: 12px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #fefefe , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #dfdfdf;
}

.c7:disabled {
  color: #848584;
  text-shadow: 1px 1px white;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:not(:disabled):active {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #dfdfdf , inset 1px 1px 0 0  #848584 , inset -2px -2px 0 0  #fefefe , inset 2px 2px 0 0  #0a0a0a;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c1 {
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #dfdfdf , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 300px;
  height: 200px;
  padding: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 16px;
  height: 16px;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2;
}

.c6:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-weight: 600;
}

.c2 {
  height: 20px;
  padding: 1px 2px;
  margin: 0 0 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="200"
      width="300"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="16"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="16"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      >
        Hello
      </div>
    </section>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with width and height props 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 6px 22px 6px;
  min-width: 70px;
  font-size: 12px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #fefefe , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #dfdfdf;
}

.c7:disabled {
  color: #848584;
  text-shadow: 1px 1px white;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:not(:disabled):active {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  border: 0;
  box-shadow: inset -1px -1px 0 0  #dfdfdf , inset 1px 1px 0 0  #848584 , inset -2px -2px 0 0  #fefefe , inset 2px 2px 0 0  #0a0a0a;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c1 {
  border: 0;
  box-shadow: inset -1px -1px 0 0  #0a0a0a , inset 1px 1px 0 0  #dfdfdf , inset -2px -2px 0 0  #848584 , inset 2px 2px 0 0  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 300px;
  height: 200px;
  padding: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 16px;
  height: 16px;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2;
}

.c6:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-weight: 600;
}

.c2 {
  height: 20px;
  padding: 1px 2px;
  margin: 0 0 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="200"
      width="300"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="16"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="16"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      >
        Hello
      </div>
    </section>
  </div>
</div>
`;
